# ml-22-23

./: p1_perceptron.ipynb  pyproject.toml
ml/: activation.py  neurons.py
notebooks/: p1_perceptron.ipynb  p2_perceptron_learning_rule.ipynb  p3_sigmoid_neuron.ipynb
p1-perceptron/: main.py
p1_perceptron/: __init__.py  main.py
p2_perceptron_learning_rule/: main.py
p3_sigmoid_neuron/: __init__.py  main.py
p4_backpropagation/: __init__.py  main.py
test/: test_backpropagation.py  test_learning_rule.py  test_perceptron.py  test_sigmoid_neuron.py
