[project]
name = "ml_22_23"
version = "1.2.0"
description = "Exercises for the subject Machine learning of the year 2022-2023"
authors = [
    {name = "Jimmy Bierenbroodspot", email = "jim12.brood@gmail.com"},
]
requires-python = ">=3.9"
dependencies = ["ipykernel"]

[tool.setuptools.packages.find]
exclude = ["ml_22_23.tests*", "ml_22_23.notebooks*"]
include = ["p1_perceptron", "p2_perceptron_learning_rule"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
